[package]
name = "hello-ssd1306"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.5.0", features = [
    # "defmt",
    "time-driver-any",
    "stm32c092kc",
    "memory-x",
    "unstable-pac",
    "exti",
    "chrono",
] }
embassy-sync = { version = "0.7.2", features = [] }
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    # "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

# defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "1.0.0", features = [] }
heapless = { version = "0.8", default-features = false }
chrono = { version = "^0.4", default-features = false }
ssd1306 = { version = "0.10.0", features = [
    "graphics",
    "embedded-graphics-core",
    "async",
] }
embedded-graphics = "0.8.1"

[profile.release]
# debug = 2
opt-level = 3

[package.metadata.embassy]
build = [{ target = "thumbv6m-none-eabi" }]
